infra/k8s/overlays/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hopngo-prod
  labels:
    name: hopngo-prod
    environment: production
